crates/bcp-tests/tests/snapshots/conformance__conversation_markdown.snap
---
source: crates/bcp-tests/tests/conformance.rs
expression: output
---
**User**: Fix the connection timeout bug.

**Assistant**: I'll examine the pool configuration and trace the timeout path.
