crates/bcp-tests/tests/snapshots/conformance__conversation_minimal.snap
---
source: crates/bcp-tests/tests/conformance.rs
expression: output
---
[user] Fix the connection timeout bug.

[assistant] I'll examine the pool configuration and trace the timeout path.
