crates/bcp-tests/tests/snapshots/conformance__conversation_xml.snap
---
source: crates/bcp-tests/tests/conformance.rs
expression: output
---
<context>
<turn role="user">Fix the connection timeout bug.</turn>

<turn role="assistant">I'll examine the pool configuration and trace the timeout path.</turn>
</context>
