crates/bcp-tests/tests/snapshots/conformance__simple_code_minimal.snap
---
source: crates/bcp-tests/tests/conformance.rs
expression: output
---
--- src/main.rs [rust] ---
fn main() {
    println!("Hello, LCP!");
}
