crates/bcp-tests/tests/snapshots/conformance__simple_code_xml.snap
---
source: crates/bcp-tests/tests/conformance.rs
expression: output
---
<context>
<code lang="rust" path="src/main.rs">
fn main() {
    println!("Hello, LCP!");
}
</code>
</context>
